--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@ html {
     scroll-behavior: smooth;
 }
 #inicio {
-    background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url(./img/fondo2.jpg);
+    background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url(./img/fondo.jpg);
     background-size: cover;
     background-position: center center;
     height: 100vh;
@@ -75,7 +75,7 @@ html {
     height: 100vh;
     margin: auto;
     font-weight: bold;
-    color: #f3f3f3;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -265,6 +265,7 @@ html {
 .contenedor-skills .skill .info {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .contenedor-skills .skill .lista {
     display: inline-block;
